--- a/build.gradle
+++ b/build.gradle
@@ -33,3 +33,8 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+jar {
+    manifest.attributes 'Main-Class': 'webserver.WebServer'
+    enabled = false
+}
