--- a/build.gradle
+++ b/build.gradle
@@ -16,18 +16,18 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-    testImplementation 'org.assertj:assertj-core:3.21.0'
-    implementation 'com.google.guava:guava:30.1.1-jre'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation 'org.assertj:assertj-core:3.22.0'
+    implementation 'com.google.guava:guava:31.1-jre'
 
-    implementation 'org.slf4j:slf4j-api:1.7.30'
+    implementation 'ch.qos.logback:logback-core:1.2.11'
+    implementation 'ch.qos.logback:logback-classic:1.2.11'
 
-    implementation 'ch.qos.logback:logback-core:1.2.3'
-    implementation 'ch.qos.logback:logback-classic:1.2.3'
+    implementation 'org.slf4j:slf4j-api:1.7.36'
 
-    implementation 'org.projectlombok:lombok:1.18.22'
-    annotationProcessor('org.projectlombok:lombok:1.18.22')
+    implementation 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor('org.projectlombok:lombok:1.18.24')
 }
 
 test {
@@ -36,5 +36,9 @@ test {
 
 jar {
     manifest.attributes 'Main-Class': 'webserver.WebServer'
+    from configurations.runtimeClasspath.files.collect { zipTree(it) }
+
+    //'Class-Path': configurations.runtimeClasspath.files.collect { it.getName() }.join(' ')
     // enabled = false
+
 }
