--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'org.example'
@@ -34,8 +35,12 @@ test {
     useJUnitPlatform()
 }
 
+application {
+    mainClass = 'webserver.WebServer'
+}
+
 jar {
-    manifest.attributes 'Main-Class': 'webserver.WebServer'
+    //manifest.attributes 'Main-Class': 'webserver.WebServer'
     from configurations.runtimeClasspath.files.collect { zipTree(it) }
 
     //'Class-Path': configurations.runtimeClasspath.files.collect { it.getName() }.join(' ')
