--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ repositories {
     mavenCentral()
 }
 
+project.buildDir='/webapp/WEB-INF'
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
@@ -29,6 +31,11 @@ dependencies {
 
     implementation 'org.projectlombok:lombok:1.18.24'
     annotationProcessor('org.projectlombok:lombok:1.18.24')
+
+    implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.21'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:10.0.21'
+
+    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:2.0.0'
 }
 
 test {
